--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
-* {
+body {
   margin: 0;
-  padding: 0;
 }
 
 .block {
@@ -8,14 +7,14 @@
   width: 100%;
 }
 
-.block_red {
+.block_1 {
   background-color: red;
 }
 
-.block_green {
+.block_2 {
   background-color: green;
 }
 
-.block_blue {
+.block_3 {
   background-color: blue;
 }
